--- a/main.html
+++ b/main.html
@@ -8,6 +8,39 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table border="1">
+		<thead>
+		<tr>
+			<th>Rool numbers</th>
+			<th>Names</th>
+		</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1.</td>
+				<td>Vijay</td>
+			</tr>
+			<tr>
+				<td>2.</td>
+				<td>hari</td>
+			</tr>
+			<tr>
+				<td>3.</td>
+				<td>Krishna</td>
+			</tr>
+		</tbody>
+	</table>
+	<ol>
+		<li><img src="https://picsum.photos/id/123/200/300" alt="logo"></li>
+		<li><video height="400" width="700" controls>
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+		</li>
+		<li>
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg" controls>
+		</li>
+	</ol>
+					
+		
     <script type="text/javascript" src="./script.js">
 </script>
 
