--- a/main.html
+++ b/main.html
@@ -30,6 +30,7 @@
 			</tr>
 		</tbody>
 	</table>
+	<h1>List of medias</h1>
 	<ol>
 		<li><img src="https://picsum.photos/id/123/200/300" alt="logo"></li>
 		<li><video height="400" width="700" controls>
